<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">IR Hub</string>
    <string name="action_settings">Settings</string>
    <string name="yourCustomButton">Your custom button</string>
    <string name="yourDeviceList">Your devices</string>
    <string name="save">Save</string>
    <string name="change">Change</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>

    <string name="title_activity_home">Rooms</string>
    <string name="search_hint_activity_home">Search Rooms</string>
    <string name="title_activity_devices">Devices</string>
    <string name="search_hint_activity_devices">Search Devices</string>
    <string name="title_activity_setting">Setting</string>
    <string name="title_activity_splash">Splash</string>

    <string name="delete">Delete</string>
    <string name="scanBLE">Scan BLE device</string>

    <string name="successful">Successful</string>
    <string name="undo">Undo</string>
    <string name="deviceNameEmpty">Device name, type, and brand cannot empty.</string>

    <string name="choosePowerButton">"Try to press there power buttons and choose the one worked for your device."</string>
    <string name="chooseType">CHOOSE TYPE</string>
    <string name="chooseBrand">CHOOSE BRAND</string>

    <string name="devices">device(s)</string>
    <string name="ble_paired">Paired</string>
    <string name="ble_not_support">BLE not support for your phone.</string>

    <string name="emptyRoom">"Opps, you don't have any room. Please add your rooms by pressing add button below."</string>
    <string name="emptyDevices">"Opps, you don't have any device. Please add your devices by pressing add button below."</string>

    <string name="addRoom">Add room</string>
    <string name="addCustomButton">Add custom button</string>

    <string name="addDevice">Add Device</string>
    <string name="roomName">Room name</string>
    <string name="buttonName">Button name</string>

    <string name="deviceName">Device name</string>

    <string name="title_activity_control">ControlActivity</string>
    <string name="title_activity_control_air_conditioner">ControlAirConditionerActivity</string>


</resources>
