<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="23dp"
            android:layout_height="23dp"
            android:layout_margin="10dp"
            android:src="@mipmap/tv" />

        <vn.fpt.ircontroller.customizes.MyTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:text="@string/addDevice"
            android:textColor="@color/colorPrimary"
            android:textSize="22dp" />
    </LinearLayout>

    <vn.fpt.ircontroller.customizes.MyEditText
        android:id="@+id/device"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/bound_edittext"
        android:gravity="left|top"
        android:hint="@string/deviceName"
        android:inputType="text"
        android:lines="1"
        android:padding="10dp"
        android:textColor="@color/gray"
        android:textCursorDrawable="@null"
        android:textSize="16dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:gravity="center"
        android:orientation="vertical">

        <Spinner
            android:id="@+id/type"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_weight="1">

        </Spinner>

        <Spinner
            android:id="@+id/brand"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_weight="1">

        </Spinner>
    </LinearLayout>

    <vn.fpt.ircontroller.customizes.MyTextView
        android:id="@+id/tips"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:text="@string/choosePowerButton"
        android:textColor="@color/colorPrimaryLight"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/layout"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:visibility="gone">

        <ImageView
            android:layout_width="12dp"
            android:layout_height="12dp"
            android:layout_marginRight="3dp"
            android:src="@mipmap/arrow_left" />

        <HorizontalScrollView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <LinearLayout
                android:id="@+id/choose_power_button_block"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_marginBottom="5dp"
                android:orientation="horizontal">

            </LinearLayout>
        </HorizontalScrollView>

        <ImageView
            android:layout_width="12dp"
            android:layout_height="12dp"
            android:layout_marginLeft="3dp"
            android:src="@mipmap/arrow_right" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="right"
        android:orientation="horizontal">

        <Button
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:background="?attr/selectableItemBackground"
            android:text="@string/cancel"
            android:textColor="@color/gray"
            android:textSize="15dp" />

        <Button
            android:id="@+id/add"
            android:layout_width="60dp"
            android:layout_height="40dp"
            android:layout_marginRight="20dp"
            android:background="?attr/selectableItemBackground"
            android:text="@string/add"
            android:textColor="@color/red"
            android:textSize="15dp" />
    </LinearLayout>

</LinearLayout>